--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
         "@ionic-native/core": "3.12.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
+        "@ionic/cloud-angular": "^0.12.0",
         "@ionic/storage": "2.0.1",
         "angular2-moment": "^1.6.0",
         "angularfire2": "^4.0.0-rc.1",
         "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.4.0",
         "cordova-plugin-browsertab": "^0.2.0",
         "cordova-plugin-buildinfo": "^1.1.0",
         "cordova-plugin-compat": "^1.1.0",
